Making google collections page responsive, fixing spacing for footer

--- a/css/about.css
+++ b/css/about.css
@@ -876,6 +876,12 @@
       margin-right: 20px;
       margin-left: 20px;
     }
+    
+    .columns-15 {
+      margin-right: 20px;
+      margin-left: 20px;
+    }
+
     .navigation {
       padding-right: 20px;
       padding-left: 20px;
